implement postgres setup
